grok pattern added to logstash

--- a/cctv_surveillance/conf/logstash.conf
+++ b/cctv_surveillance/conf/logstash.conf
@@ -25,6 +25,10 @@ filter {
      match => ["t_created", "UNIX"]
      target => "msg_created"
    }
+
+   grok {
+      match => { "objects" => "%{WORD:object}: %{BASE10NUM:confidense}" }
+  }
   
 }
 
