--- a/cctv_surveillance/docker-compose.yml
+++ b/cctv_surveillance/docker-compose.yml
@@ -140,10 +140,12 @@ services:
         - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
         - "discovery.type=single-node"
         - "xpack.security.enabled=false"
+        #- "path.repo=[\"/usr/share/elasticsearch\"]"
     ports:
       -   "9200:9200"
       -   "9300:9300"
     volumes:
+      - ./conf/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
     healthcheck:
