changes while troubleshooting for Windows

--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -6,4 +6,4 @@ DOCKER_CHECKOUT=/usr/app/Video-Analytics        # location where code is cloned 
 
 # !!! Modify following variable to suit your computing environment !!!
 MOVIE_FILES=/usr/VideoAnalytics/movies
-DOCKER_CODE=${DOCKER_SANDBOX}            # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
+DOCKER_CODE=/usr/app/sandbox             # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
