--- a/cctv_surveillance/.env
+++ b/cctv_surveillance/.env
@@ -5,5 +5,5 @@ DOCKER_CHECKOUT=/usr/app/Video-Analytics        # location where code is cloned 
 
 
 # !!! Modify following variable to suit your computing environment !!!
-MOVIE_FILES=${MOVIE_FILES}
+MOVIE_FILES=/usr/VideoAnalytics/movies/VideoAnalytics
 DOCKER_CODE=${DOCKER_SANDBOX}             # assign it to either DOCKER_SANDBOX or DOCKER_CHECKOUT above
